--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -90,9 +90,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/dashboard/tcats">
               <span data-feather="layers"></span>
-              Integrations
+              Transaction categories
             </a>
           </li>
         </ul>
