--- a/templates/tcat.page.tmpl
+++ b/templates/tcat.page.tmpl
@@ -4,7 +4,7 @@
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
   <h2>Transaction categories</h2>
   <br>
-  <a class="btn btn-primary" href="/tcats/new" role="button">Create</a>
+  <a class="btn btn-primary" href="/dashboard/tcats/new" role="button">Create</a>
   <br>
   <div class="table-responsive">
   {{$tcats := index .Data "tcats"}}
@@ -25,8 +25,16 @@
           <td>{{.Id}}</td>
           <td>{{.Name}}</td>
           <td>{{.Description}}</td>
-          <td></td>
-          <td></td>
+          <form method="get" action="/dashboard/tcats/update" novalidate>
+          <input type="hidden" name="id" value="{{.Id}}">
+          <td>
+          <input type="submit" class="btn btn-sm btn-warning" value="update">
+          </td>
+          </form>
+          <form method="post" action="/dashboard/tcats/delete" novalidate>
+          <input type="hidden" name="id" value="{{.Id}}">
+          <td><input type="submit" class="btn btn-sm btn-danger" value="delete"></td>
+          </form>
         </tr>
         {{end}}
       </tbody>
