--- a/templates/tcat_update.page.tmpl
+++ b/templates/tcat_update.page.tmpl
@@ -4,19 +4,20 @@
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
   <h2>Add new category</h2>
   <br>
-    <form method="post" action="/dashboard/tcats/new" novalidate>
-    
+  {{$category := index .Data "category"}}
+    <form method="post" action="/dashboard/tcats/update" novalidate>
+    <input type="hidden" name="id" value="{{$category.Id}}">
       <div class="form-group mt-3">
           <label for="name">Name</label>
           <input  class="form-control"  id="name" autocomplete="off"
-                name='name' value="" required>
+                name='name' value="{{$category.Name}}" required>
       </div>
 
       <div class="form-group mt-3" >
           <label for="desc">Description</label>
           <input class="form-control" 
                   id="desc" autocomplete="off"
-                name='desc' value="" required>
+                name='desc' value="{{$category.Description}}" required>
       </div>
       <hr>
       <input type="submit" class="btn btn-primary" value="Submit">
