massive number of changes

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -84,15 +84,21 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/dashboard/trecurence">
               <span data-feather="bar-chart-2"></span>
-              Reports
+              Recurent Transactions
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/tcats">
               <span data-feather="layers"></span>
               Transaction categories
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/ttypes">
+              <span data-feather="layers"></span>
+              Transaction Types
             </a>
           </li>
         </ul>
