--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -68,7 +68,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file"></span>
-              Orders
+              TransactionDate
             </a>
           </li>
           <li class="nav-item">
@@ -78,63 +78,32 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/dashboard/tdata">
               <span data-feather="users"></span>
-              Customers
+              Transactions
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/trecurence">
               <span data-feather="bar-chart-2"></span>
-              Recurent Transactions
+              Recurence
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/tcats">
               <span data-feather="layers"></span>
-              Transaction categories
+              Categories
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/dashboard/ttypes">
               <span data-feather="layers"></span>
-              Transaction Types
+              Types
             </a>
           </li>
         </ul>
 
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
-          <a class="link-secondary" href="#" aria-label="Add a new report">
-            <span data-feather="plus-circle"></span>
-          </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Current month
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Year-end sale
-            </a>
-          </li>
-        </ul>
+        
       </div>
     </nav>
     {{block "content" .}}
