first good working state

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -60,21 +60,9 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="/flowboard">
               <span data-feather="home"></span>
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file"></span>
-              TransactionDate
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="shopping-cart"></span>
-              Products
+              Flow board
             </a>
           </li>
           <li class="nav-item">
@@ -99,6 +87,12 @@
             <a class="nav-link" href="/dashboard/ttypes">
               <span data-feather="layers"></span>
               Types
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard/tlog">
+              <span data-feather="layers"></span>
+              Log
             </a>
           </li>
         </ul>
